# sisdis

./: CMakeLists.txt  CMakeLists.txt.user.301c31a  README.md  hostfile.txt  httpserver.cpp  httpserver.cpp.save  httpserver.h  main.cpp  main_remotefile.cpp  main_slave.cpp  mpi_manager.cpp  mpi_manager.h  prueba.txt  pruebaclase.cpp  pruebaclase.h  pruebaimpl.cpp  pruebaimpl.h  pruebastub.cpp  pruebastub.h  remotefile.cpp  remotefile.h  remotefile_imp.cpp  remotefile_imp.h  remotefile_stub.cpp  remotefile_stub.h  remotefileh.cpp  remotefileh.h  utils.cpp
html_dir/: index.html  index.html.save  resultado.html
